# analog_board_test

./: CMakeLists.txt  README.MD  UART_SHELL_README.md  sdkconfig
.cache/clangd/index/: ads111x.c.5C4382D32D1B1443.idx  ads111x.h.67BE2D9789E7F7A3.idx  analog_board_test_main.c.9998B299D1FF3CD4.idx  cmd.c.6630EE98B7A177B4.idx  cmd.h.722264CBC5C6BFCF.idx  cmd_basic.c.E720A7BA1F67B514.idx  cmd_basic.h.50F6DBB48E114A63.idx  cmd_encoding.c.D36E904AA6E5E274.idx  cmd_encoding.h.B4E0D47BB0C61DC5.idx  cmd_filesystem.c.D2A08693A363A132.idx  cmd_filesystem.h.7970B5C57E55C0AC.idx  cmd_freertos.c.61F761401DEB6015.idx  cmd_freertos.h.7EBFFBB9EA4F04AE.idx  cmd_system.c.6BE8EFBB8836C01D.idx  cmd_system.h.43A42133E773B2D8.idx  encoding_commands.c.59B276A97F0BDDA5.idx  encoding_commands.h.624503110EC90489.idx  encoding_config.c.2186FD9BDE2DD0D6.idx  key.c.4173960EA96D24DB.idx  (+25 more)
components/esp32shell/: CMakeLists.txt  README.md  SHELL_PRINT_README.md  cmd.c  shell.c  shell_encoding.c  shell_print.c
components/esp32shell/cmd/: cmd_basic.c  cmd_basic.h  cmd_encoding.c  cmd_encoding.h  cmd_filesystem.c  cmd_filesystem.h  cmd_freertos.c  cmd_freertos.h  cmd_system.c  cmd_system.h
components/esp32shell/include/: cmd.h  esp32shell_example.h  shell.h  shell_encoding.h  shell_print.h
components/tca9535_driver/: CMakeLists.txt  README.md  tca9535.c  tca9535_example.c
main/: CMakeLists.txt  analog_board_test_main.c  i2c_config.c  i2c_config.h  idf_component.yml  key.c  key.h  led.c  led.h  led_commands.c  led_commands.h  sd.c  sd.h  test_commands.c  test_commands.h  uart_driver.c  uart_driver.h
(+1 files in other folders)
