idf_component_register(
    SRCS 
        "analog_board_test_main.c"
        "uart_driver.c"
        "sd.c"
        "i2c_config.c"
    INCLUDE_DIRS 
        "."
    REQUIRES 
        esp32shell
        driver
        nvs_flash
        fatfs
        wear_levelling
        tca9535_driver
        esp-idf-lib__ads111x
)
