idf_component_register(
    SRCS 
        "shell.c" 
        "cmd.c"
        "cmd/cmd_basic.c"
        "cmd/cmd_system.c"
        "cmd/cmd_freertos.c"
        "cmd/cmd_filesystem.c"
        "cmd/cmd_encoding.c"
    INCLUDE_DIRS 
        "include" 
        "cmd"
    REQUIRES 
        driver 
        esp_system 
        freertos
        nvs_flash
) 